testsuite/tests/hidden_includes/cant_reference_hidden.ocamlc.reference
File "libc/c3.ml", line 1, characters 8-11:
1 | let x = A.x + 1
            ^^^
Error: Unbound module A
